# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1155 2012/12/16 00:09:57 zmedico Exp $

*portage-2.2.0_alpha149 (16 Dec 2012)

  16 Dec 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha149.ebuild:
  2.2.0_alpha149 version bump. This includes all of the fixes in 2.1.11.38. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.38 (16 Dec 2012)

  16 Dec 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.38.ebuild:
  2.1.11.38 version bump. This fixes 'ValueError: I/O operation on closed file'
  for API consumers using python's multiprocessing module, and also fixes
  repoman handling of * and ~* in KEYWORDS. Bug #445274 tracks all bugs fixed
  since portage-2.1.11.31.

  13 Dec 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.33.ebuild,
  -portage-2.1.11.36.ebuild, -portage-2.2.0_alpha144.ebuild,
  -portage-2.2.0_alpha147.ebuild:
  Remove old versions.

*portage-2.2.0_alpha148 (11 Dec 2012)

  11 Dec 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha148.ebuild:
  2.2.0_alpha148 version bump. This includes all of the fixes in 2.1.11.37. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.37 (11 Dec 2012)

  11 Dec 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.37.ebuild:
  2.1.11.37 version bump. This fixes bug #446136 (duplicate elog messages), bug
  #446774 (regression triggers die during strip), and bug #446420 (preserve
  xattrs for stripped binaries) Bug #445274 tracks all bugs fixed since
  portage-2.1.11.31.

  11 Dec 2012; Raúl Porcel <armin76@gentoo.org> portage-2.1.11.31.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #440852

*portage-2.2.0_alpha147 (10 Dec 2012)

  10 Dec 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha147.ebuild,
  -portage-2.2.0_alpha146.ebuild:
  2.2.0_alpha147 version bump. This includes all of the fixes in 2.1.11.36. Bug